examples/errors/parsing/mergesort.cn
sort List(a) = { Nil : () | Cons : (a * List(a)) }

fun append : (List(Int) * List(Int)) -> List(Int) [spec] = {
    (Nil (), ys) -> ys
  | (Cons (x, xs), ys) -> Cons (x, append (xs, ys))
}

fun split : List(Int) -> (List(Int) * List(Int)) [spec] = {
    Nil () -> (Nil (), Nil ())
  | Cons (x, Nil ()) -> (Cons (x, Nil ()), Nil ())
  | Cons (x, Cons (y, rest)) ->
      let (xs, ys) = split rest;
      (Cons (x, xs), Cons (y, ys))
}

fun merge : (List(Int) * List(Int)) -> List(Int) [spec] = {
    (Nil (), ys) -> ys
  | (xs, Nil ()) -> xs
  | (Cons (x, xs), Cons (y, ys)) ->
      if x <= y then
        Cons (x, merge (xs, Cons (y, ys)))
      else
        Cons (y, merge (Cons (x, xs), ys))
}

fun mergesort : List(Int) -> List(Int) [spec] = {
    Nil () -> Nil ()
  | Cons (x, Nil ()) -> Cons (x, Nil ())
  | xs ->
      let (left, right) = split xs;
      merge (mergesort left, mergesort right)
}

main : () [impure] = ()
